--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import 'partials/pages/history';
 @import 'partials/pages/news';
 @import 'partials/pages/home';
+@import 'partials/pages/membership';
 
 @import 'partials/header';
 @import 'partials/footer';
