updated fonts and some css

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,13 @@
+@import url("//hello.myfonts.net/count/32edde");
 .my-box { padding: 10px; }
 
 @media (min-width: 1200px) { .my-box { padding: 20px; } }
 
-@font-face { font-family: 'LTC Twentieth Century Medium'; src: url("../fonts/LTCTwentiethCenturyMedium.eot"); src: url("../fonts/LTCTwentiethCenturyMedium.eot?#iefix") format("embedded-opentype"), url("../fonts/LTCTwentiethCenturyMedium.woff2") format("woff2"), url("../fonts/LTCTwentiethCenturyMedium.woff") format("woff"), url("../fonts/LTCTwentiethCenturyMedium.svg#webfont") format("svg"); font-weight: normal; font-style: normal; }
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus { background-color: #a30723; }
 
-body { color: #6d6e70; font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.2; }
+@font-face { font-family: 'LTCTwentiethCenturyMedium'; src: url("../fonts/32EDDE_0_0.eot"); src: url("../fonts/32EDDE_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/32EDDE_0_0.woff2") format("woff2"), url("../fonts/32EDDE_0_0.woff") format("woff"), url("../fonts/32EDDE_0_0.ttf") format("truetype"); }
+
+body { color: #6c6e70; font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.2; }
 
 h1, h2, h3, h4, h5 { font-weight: normal; }
 
@@ -22,15 +25,9 @@ p { font-size: 14px; font-family: "Open Sans", Helvetica, Arial, sans-serif; lin
 
 .image-caption { margin-top: 10px; margin-right: 20px; margin-bottom: 0; font-size: 10px; line-height: 1.2; }
 
-.photo-credit { margin-top: 5px; margin-bottom: 10px; text-align: right; text-transform: uppercase; font-weight: 300; font-size: 9px; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
+.photo-credit { margin-top: 5px; margin-bottom: 10px; text-align: right; text-transform: uppercase; font-weight: 300; font-size: 10px; font-family: "Open Sans", Helvetica, Arial, sans-serif; color: #6c6e70; }
 
 a { color: #a30723; }
-
-.gform_wrapper h3.gform_title { font-weight: normal !important; }
-
-.gform_wrapper label.gfield_label { margin-bottom: 0 !important; font-weight: normal !important; font-size: 12px !important; font-size: inherit; }
-
-body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; }
 
 body { background-color: #e2e2e2; }
 
@@ -57,6 +54,24 @@ body > .container { background-color: #fff; }
 textarea { border-color: #bfbfbf !important; }
 
 .ngg-navigation a.next, .ngg-navigation a.page-numbers, .ngg-navigation a.prev, .ngg-navigation span.next, .ngg-navigation span.page-numbers, .ngg-navigation span.prev { margin-right: 0; padding: 0; border: 0 !important; color: #a30723 !important; text-decoration: none; }
+
+.gform_wrapper { padding: 10px; border: 1px solid #a1a2a1 !important; margin-top: 0; }
+
+.gform_wrapper span.ginput_total { color: #6c6e70; font-size: inherit; }
+
+.gform_wrapper h3.gform_title { font-weight: normal !important; text-transform: uppercase; }
+
+.gform_wrapper select { padding-right: 22px; -webkit-appearance: none; background: #fff url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMjIiIHZpZXdCb3g9IjAgMCAxNiAyMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+ZHJvcGFycm93PC90aXRsZT48cGF0aCBkPSJNMCA3LjM0NGgxMC41bC01LjI1IDUuNTY2LTUuMjUtNS41NjV6IiBmaWxsPSIjNGU0ZTRlIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=") right center no-repeat !important; border: 1px solid #bfbfbf; border-radius: 0; padding: 9px 12px; height: 33px; line-height: 1; }
+
+.gform_button.button { color: #a30723; text-transform: uppercase; -moz-appearance: none; -webkit-appearance: none; background-color: #fff; border: 0; padding: 0; }
+
+.gform_wrapper .gform_footer { padding: 0; margin: 5px 0 0; clear: both; width: 100%; }
+
+.gform_wrapper h3.gform_title { font-weight: normal !important; }
+
+.gform_wrapper label.gfield_label { margin-bottom: 0 !important; font-weight: normal !important; font-size: 12px !important; font-size: inherit; }
+
+body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; }
 
 .trustees .col-left h3, .trustees .col-main h3, .trustees .col-right h3 { text-transform: uppercase; font-weight: bold; font-size: 14px; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
 
@@ -98,7 +113,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-participate li b { color: #a30723; font-weight: normal; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
 
-.page-participate .gravity-form form { padding: 20px; border: 1px solid #6d6e70; }
+.page-participate .gravity-form form { padding: 20px; border: 1px solid #6c6e70; }
 
 .page-participate .gravity-form form input[type='submit'] { margin-left: 0; padding: 0; border: 0; background-color: #fff; color: #a30723; text-transform: uppercase; font-size: 14px; }
 
@@ -110,7 +125,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-participate blockquote { padding-top: 0; border-left: 0; }
 
-.page-press .dmbs-main h3 { margin-bottom: 5px; color: #6d6e70; text-transform: uppercase; font-weight: bold; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
+.page-press .dmbs-main h3 { margin-bottom: 5px; color: #6c6e70; text-transform: uppercase; font-weight: bold; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
 
 .page-press .news-content { font-size: 13px; font-family: Georgia, "Times New Roman", Times, serif; }
 
@@ -142,7 +157,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-welcome .row-flex { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
 
-.page-welcome .dmbs-content { position: relative; margin-bottom: -21px; min-height: 700px; background-image: url("../images/member-patterson-michael.jpg"); background-position: 30px bottom; background-repeat: no-repeat; }
+.page-welcome .dmbs-content { position: relative; margin-bottom: -21px; min-height: 660px; background-image: url("../images/member-patterson-michael.jpg"); background-position: 30px bottom; background-repeat: no-repeat; }
 
 @media (max-width: 599px) { .page-welcome .dmbs-content { min-height: 0; background-image: none; } }
 
@@ -183,15 +198,15 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-exhibitions .row-bottom .caption p { margin-right: 20px; font-size: 20px; line-height: 26px; }
 
-.page-exhibitions .row-bottom .opportunities { padding-left: 10px; border-left: 6px double #6d6e70; font-size: 17px; line-height: 24px; }
+.page-exhibitions .row-bottom .opportunities { padding-left: 10px; border-left: 6px double #6c6e70; font-size: 17px; line-height: 24px; }
 
 .page-exhibitions .row-bottom .opportunities .opportunities-title { margin-bottom: 5px; text-transform: uppercase; font-size: 30px; font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; }
 
-.page-history .image-space-top { margin-top: 35px; }
+.page-history .image-space-top { margin-top: 25px; }
 
 .page-news .profile-date { font-size: 12px; }
 
-.page-news .dmbs-main h3 { margin-bottom: 10px; color: #6d6e70; text-transform: uppercase; font-weight: bold; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
+.page-news .dmbs-main h3 { margin-bottom: 10px; color: #6c6e70; text-transform: uppercase; font-weight: bold; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
 
 .page-news .profile-hed { margin-top: 5px; font-weight: bold; font-size: 20px; font-family: Georgia, "Times New Roman", Times, serif; }
 
@@ -229,11 +244,11 @@ textarea { border-color: #bfbfbf !important; }
 
 @media (max-width: 599px) { .page-home .now-items { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } }
 
-.page-home .now-items > div { padding: 20px; width: 224px; border: 1px solid #6d6e70; border-left: 0; }
+.page-home .now-items > div { padding: 20px; width: 224px; border: 1px solid #6c6e70; border-left: 0; }
 
-@media (max-width: 599px) { .page-home .now-items > div { margin-bottom: 10px; width: 100%; border-left: 1px solid #6d6e70; } }
+@media (max-width: 599px) { .page-home .now-items > div { margin-bottom: 10px; width: 100%; border-left: 1px solid #6c6e70; } }
 
-.page-home .now-items > div:first-child { border-left: 1px solid #6d6e70; }
+.page-home .now-items > div:first-child { border-left: 1px solid #6c6e70; }
 
 .page-home .now-items > div p { font-size: 14px; font-family: Georgia, "Times New Roman", Times, serif; }
 
@@ -241,7 +256,7 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .now-items > div .type { color: #a30723; text-transform: uppercase; font-size: 29px; font-family: Georgia, "Times New Roman", Times, serif; }
 
-.page-home .now-items > div .date { margin-top: 15px; padding-top: 2px; padding-bottom: 5px; border-top: 1px solid #6d6e70; border-bottom: 1px solid #6d6e70; color: #6d6e70; font-size: 24px; font-family: Georgia, "Times New Roman", Times, serif; }
+.page-home .now-items > div .date { margin-top: 15px; padding-top: 2px; padding-bottom: 5px; border-top: 1px solid #6c6e70; border-bottom: 1px solid #6c6e70; color: #6c6e70; font-size: 24px; font-family: Georgia, "Times New Roman", Times, serif; }
 
 .page-home .now-items > div h3 { margin-top: 15px; margin-bottom: 0; text-transform: none; font-size: 24px; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
 
@@ -251,9 +266,9 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .waa-study { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 30px; margin-bottom: 20px; }
 
-.page-home .waa-study .waa-study-box { margin-top: 20px; width: 100%; border: 1px solid #6d6e70; }
+.page-home .waa-study .waa-study-box { margin-top: 20px; width: 100%; border: 1px solid #6c6e70; }
 
-.page-home .waa-study .waa-study-box .box-header { padding: 5px; background-color: #6d6e70; color: #fff; text-align: center; text-transform: uppercase; letter-spacing: .2em; font-size: 22px; font-family: Georgia, "Times New Roman", Times, serif; }
+.page-home .waa-study .waa-study-box .box-header { padding: 5px; background-color: #6c6e70; color: #fff; text-align: center; text-transform: uppercase; letter-spacing: .2em; font-size: 22px; font-family: Georgia, "Times New Roman", Times, serif; }
 
 @media (max-width: 599px) { .page-home .waa-study .waa-study-box .box-header { letter-spacing: 0; font-size: 18px; } }
 
@@ -299,21 +314,9 @@ textarea { border-color: #bfbfbf !important; }
 
 .page-home .waa-study .study-item a { text-transform: uppercase; }
 
-.page-membership h3, .page-donate h3 { color: #a30723; font-weight: bold; font-size: 14px; margin-bottom: 10px !important; }
+.page-membership h3, .page-donate h3 { color: #a30723; font-weight: bold; font-size: 14px; margin-bottom: 10px !important; margin-top: 20px; }
 
 blockquote { border-left: 0; }
-
-.gform_wrapper { padding: 10px; border: 1px solid #a1a2a1 !important; margin-top: 0; }
-
-.gform_wrapper span.ginput_total { color: #6d6e70; font-size: inherit; }
-
-.gform_wrapper h3.gform_title { font-weight: normal !important; text-transform: uppercase; }
-
-.gform_wrapper select { padding-right: 22px; -webkit-appearance: none; background: #fff url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMjIiIHZpZXdCb3g9IjAgMCAxNiAyMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+ZHJvcGFycm93PC90aXRsZT48cGF0aCBkPSJNMCA3LjM0NGgxMC41bC01LjI1IDUuNTY2LTUuMjUtNS41NjV6IiBmaWxsPSIjNGU0ZTRlIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=") right center no-repeat !important; border: 1px solid #bfbfbf; border-radius: 0; padding: 10px 12px; height: 33px; }
-
-.gform_button.button { color: #a30723; text-transform: uppercase; -moz-appearance: none; -webkit-appearance: none; background-color: #fff; border: 0; padding: 0; }
-
-.gform_wrapper .gform_footer { padding: 0; margin: 5px 0 0; clear: both; width: 100%; }
 
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
