--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'partials/fonts';
 @import 'partials/typography';
 @import 'partials/layout';
+@import 'partials/forms';
 
 
 @import 'partials/pages/trustees';
