--- a/sass/partials/pages/_membership.scss
+++ b/sass/partials/pages/_membership.scss
@@ -5,6 +5,7 @@
     font-weight: bold;
     font-size: 14px;
     margin-bottom: 10px !important;
+    margin-top: 20px;
   }
 }
 
@@ -12,45 +13,3 @@ blockquote {
   border-left: 0;
 }
 
-.gform_wrapper {
-  padding: 10px;
-  border: 1px solid #a1a2a1 !important;
-  margin-top: 0;
-}
-
-.gform_wrapper span.ginput_total {
-  color: $gray;
-  font-size: inherit;
-}
-
-.gform_wrapper h3.gform_title {
-  font-weight: normal !important;
-  text-transform: uppercase;
-}
-
-.gform_wrapper select {
-  padding-right: 22px;
-  -webkit-appearance: none;
-  background: #fff url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMjIiIHZpZXdCb3g9IjAgMCAxNiAyMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+ZHJvcGFycm93PC90aXRsZT48cGF0aCBkPSJNMCA3LjM0NGgxMC41bC01LjI1IDUuNTY2LTUuMjUtNS41NjV6IiBmaWxsPSIjNGU0ZTRlIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=") right center no-repeat !important;
-  border: 1px solid #bfbfbf;
-  border-radius: 0;
-  padding: 10px 12px;
-  height: 33px;
-}
-
-.gform_button.button {
-  color: $maroon;
-  text-transform: uppercase;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  background-color: #fff;
-  border: 0;
-  padding: 0;
-}
-
-.gform_wrapper .gform_footer {
-  padding: 0;
-  margin: 5px 0 0;
-  clear: both;
-  width: 100%;
-}
