--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; 
 
 .trustees .trustee-pdf-downloads ul li a { padding: 6px 6px 4px; border-radius: 6px; background-color: #6d6e70; color: #fff; text-transform: uppercase; font-size: 9px; }
 
-.page-participate h4 { margin-top: 10px; margin-bottom: 3px; color: #a30723; font-weight: normal; font-size: 14px; font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.4; }
+.page-participate h4 { margin-top: 10px; margin-bottom: 3px; color: #a30723; font-weight: bold; font-size: 14px; font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.4; }
 
 .page-participate .middle-column h4 { margin-top: 0; }
 
@@ -112,12 +112,6 @@ body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; 
 .page-participate li { margin-bottom: 10px; }
 
 .page-participate li b { color: #a30723; font-weight: normal; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
-
-.page-participate .gravity-form form { padding: 20px; border: 1px solid #6c6e70; }
-
-.page-participate .gravity-form form input[type='submit'] { margin-left: 0; padding: 0; border: 0; background-color: #fff; color: #a30723; text-transform: uppercase; font-size: 14px; }
-
-.page-participate .gform_footer { margin-top: 0; padding-top: 0; }
 
 .page-participate .address { margin-left: 20px; }
 
