--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("//hello.myfonts.net/count/32edde");
 .my-box { padding: 10px; }
 
@@ -103,7 +104,19 @@ body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; 
 
 .page-participate h4 { margin-top: 10px; margin-bottom: 3px; color: #a30723; font-weight: bold; font-size: 14px; font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1.4; }
 
+.page-participate .middle-column ul { list-style: none; padding: 0; margin: 0; }
+
+.page-participate .middle-column li { padding-left: 1em; text-indent: -.7em; }
+
+.page-participate .middle-column li:before { content: "• "; color: #a30723; }
+
 .page-participate .middle-column h4 { margin-top: 0; }
+
+.page-participate .right-column ul { list-style: none; padding: 0; margin: 0; }
+
+.page-participate .right-column li { padding-left: 1em; text-indent: -.7em; }
+
+.page-participate .right-column li:before { content: "• "; color: #a30723; }
 
 .page-participate .left-column img { margin-top: 60px; }
 
@@ -314,15 +327,13 @@ blockquote { border-left: 0; }
 
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
-.navbar-nav > li > a { padding: 10px 13px; color: #6d6e70; text-transform: uppercase; letter-spacing: .04em; font-size: 12px; }
+.navbar-nav > li > a { padding: 10px 11px; color: #6d6e70; text-transform: uppercase; letter-spacing: .04em; font-size: 12px; }
 
 .navbar-nav > li > a:hover { background-color: transparent; }
 
 .navbar-nav > li.current-menu-item a { color: #a30723; }
 
 .navbar-nav > li.menu-item-has-children .caret { display: none; }
-
-.navbar-nav > li:first-child a { padding-left: 0; }
 
 @media (max-width: 599px) { .navbar-nav > li:first-child a { padding-left: 10px; } }
 
@@ -364,7 +375,7 @@ blockquote { border-left: 0; }
 
 .dmbs-footer .footer-flex { -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
-.dmbs-footer .footer-1 { margin-right: 30px; width: 283px; }
+.dmbs-footer .footer-1 { margin-right: 30px; width: 263px; }
 
 .dmbs-footer .footer-2 { margin-right: 30px; width: 165px; }
 
