--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -5,7 +5,7 @@
 
   > li {
     > a {
-      padding: 10px 13px;
+      padding: 10px 11px;
       color: #6d6e70;
       text-transform: uppercase;
       letter-spacing: .04em;
@@ -31,7 +31,7 @@
           padding-left: 10px;
         }
 
-        padding-left: 0
+        // padding-left: 0
       }
     }
     &:last-child {
