basic faculty display

--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,16 @@ body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; 
 
 blockquote { border-left: 0; }
 
+.faculty-name { font-family: Georgia, "Times New Roman", Times, serif; font-size: 12px; font-weight: bold; margin-bottom: 6px; }
+
+.faculty-description, .faculty-description p, .faculty-website, .faculty-website p { font-family: "Open Sans", Helvetica, Arial, sans-serif; font-size: 12px; line-height: 16px; margin-bottom: 0; }
+
+.faculty-website, .faculty-website p { margin-top: 10px; }
+
+.faculty-website a, .faculty-website p a { font-weight: bold; color: #6c6e70; }
+
+.faculty-photo { width: 125px; }
+
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
 .navbar-nav > li > a { padding: 10px 11px; color: #6d6e70; text-transform: uppercase; letter-spacing: .04em; font-size: 12px; }
