--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'partials/pages/news';
 @import 'partials/pages/home';
 @import 'partials/pages/membership';
+@import 'partials/pages/faculty';
 
 @import 'partials/header';
 @import 'partials/footer';
