--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,28 @@ body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; 
 
 blockquote { border-left: 0; }
 
+.page-education .exhibition-tiles { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+
+.page-education .exhibition-tiles .tile { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; margin-right: 15px; margin-bottom: 15px; padding: 40px; width: 284px; height: 284px; background-size: cover; background-repeat: no-repeat; }
+
+@media (max-width: 599px) { .page-education .exhibition-tiles .tile { margin-right: 0; width: 100%; } }
+
+.page-education .exhibition-tiles .tile .exhibition-title { color: #fff; font-weight: bold; font-size: 32px; font-family: "Open Sans", Helvetica, Arial, sans-serif; line-height: 1; }
+
+.page-education .exhibition-tiles .tile .exhibition-title a { color: #fff; }
+
+.page-education .exhibition-tiles .tile .exhibition-title a:hover { text-decoration: none; }
+
+.page-education .exhibition-tiles .tile .exhibition-subtitle { color: #fff; font-size: 24px; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
+
+.page-education .row-bottom { margin-top: 20px; }
+
+.page-education .row-bottom .caption p { margin-right: 20px; font-size: 20px; line-height: 26px; }
+
+.page-education .row-bottom .opportunities { padding-left: 10px; border-left: 6px double #6c6e70; font-size: 17px; line-height: 24px; }
+
+.page-education .row-bottom .opportunities .opportunities-title { margin-bottom: 5px; text-transform: uppercase; font-size: 30px; font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; }
+
 .faculty-grid { margin-top: 40px; padding-top: 40px; border-top: 1px dotted #6c6e70; }
 
 .faculty-grid .vertical-border { border-left: 1px dotted #6c6e70; }
